
         • ‘plot_ViolinPlot()’ Creates a combination of a kernel
           density plot with a boxplot.  This plot was especially
           written for visualisation of data where standard errors are
           zero or to small to be visualised at all,

         • ‘plot_DetPlot()’: Plots the equivalent dose (De) in
           dependency of the chosen signal integral (cf. Bailey et al.,
           2003).

  Bugfixes and changes:

         • ‘Analyse_SAR.OSLdata()’

             • Argument ‘log’ removed, but option still supported via
               ‘...’ (means log can be used as usual but it is not
               listed as explict argument),

             • enhanced support for graphical parameters such as:
               ‘mtext’

         • ‘analyse_IRSAR.RF()’

             • Argument ‘fit.trace’ removed. It can be controlled by
               the new argument ‘method.control’ instead,

             • argument ‘slide.show_density’ removed and can now be
               controlled by within the new argument ‘method.control’,

             • argument ‘method.control’ added allowing to control
               parameters of the chosen method,

             • now also the sliding matrix is returned with the
               RLum.Results 'data.object' ‘slide’,

             • the way the error is calculated was changed again to
               account for drawbacks if always just the global minimum
               is chosen (details see manual),

             • adjust the threshold finding for the criterium
               'curve_bounds' to ensure that a warning message is
               shown, if results should not be used,

             • the 'curve_bounds' message will no longer be shown, if
               the natural curve was limited by the argument
               ‘RF_nat.lim’ and within the curve limits the bounds have
               not been reached,

             • fix a bug that forces the function to crash if a limited