@@ -135,7 +135,7 @@ Changes in version 0.5.0 (, 2015):
 
          • ‘plot_DetPlot()’: Plots the equivalent dose (De) in
            dependency of the chosen signal integral (cf. Bailey et al.,
-           2003).
+           2003; #23).
 
   Bugfixes and changes:
 
@@ -244,6 +244,13 @@ Changes in version 0.5.0 (, 2015):
              • Fixed a bug in the ‘RLum.Results’ object, which returned
                false profile log-likelihood values for ‘sigma’. Report
                was gratefully provided by Eike F. Rades.
+
+             • Fixed a bug in the calculation of the standard error of
+               sigma ('overdispersion'), which was carried over from
+               RGs original S script
+
+             • new argument ‘log’ added to apply the un-logged central
+               age model
 
          • ‘calc_OSLLxTxRatio()’
 
